# tree-sitter-wenyan

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json  sieve.wy
.github/workflows/: publish.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: helloworld.txt  sieve.txt  tree.txt
