[package]
name = "tree-sitter-wenyan"
description = "wenyan grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
keywords = ["incremental", "parsing", "wenyan"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-wenyan"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.24"

[build-dependencies]
cc = "1.0"
